add emphasis on hobbies heading, and an intro paragraph to Hobbies section, a list names for each hobby and sub paragraphs detailing each hobby
Authored by: Zachary Green <ultrazacky@gmail.com

--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
 <body>
   <h1><strong>Zachary Green</strong></h1>
     <h2><em>Information About Me</em></h2>
-      <p>Placeholder text----</p>
+      <p>I was born and raised in a small rural area of Nothern California called Humboldt County. I am 35 years old. People say that I am pretty goofy person and I regularly make people laugh. I have a great love and appreciation for Japan, Japanese culture, Japanese humor and Japanese pop culture. At one point in time in my life, I thought that I might one day live there. When I was a Senior in High School I took Japanese language classes at our local University via a special program for students.
+        <br> 
+        I used to play the Violin when I was really young. My violin teacher Stephan always told me that I had the gift of the musical ear. I unfornately was never able to continue my lessons due to the cost of the classes after I turned 18, but I still from time to time like to pick it up and play. Music has been a big part of my life even before I ever started to play Violin. It has served as something that calms me down and empowers me. You can sometimes find me singing at a local karaoke and even dancing.</p>
 
-    <h2>Information About Some of My Hobbies</h2>
-      <p>Small introduction about my hobbies</p>
+    <h2><em>Information About Some of My Hobbies</em></h2>
+      <p>In the previous section I laid out 2 examples of interests that I have, but in this section I want to go into more detail on some of the other activities I enjoy.</p>
         <ul>
-          <li>hobbyOne</li>
-          <li>hobbyTwo</li>
-          <li>hobbyThree</li>
-          <li>hobbyFour</li>
+          <li>Video Gaming</li>
+            <p>Playing video games is probably my biggest hobby. It started out and has continued to be something very fond for me that ties back to my older brother Justin. My older brother and I didnt always get along with eachother growing up, but video games were the one hobby where we got along and could bond. Video Games and more importantly the consoles needed to play them probably played the biggest role in my developing a love for technology; and later programming.</p>
+          <li>Japanese Anime</li>
+            <p>Anime is something that I have actually been enjoying, long before I ever knew what it actually was. Later when I got into middle school my older brother got job and would periodically buy VHS Tapes of Japanese Anime. Back in those days in the early 1990s anime was not as easy to find like it is these days. When Dragon Ball Z first started airing on television here in the US, my Dad took an interest into anime. He would buy animes that someone had recorded off live TV in Japan and added subtitles to. My friends and I, as well and my family really got into this new medium of entertainment and it has stayed with my forever.</p>
+          <li>Magic the Gathering</li>
+            <p>Magic the Gathering is a table top card game that started back in the 1990s. Growing up I never had a chance to play the game, but in recent years I had a really good friend introduce me to the game. He bought me my first deck of cards and taught me how to play the game. Later down the road when I started my last job, my General Manager and I started to play games after work was over. He is considered one of the best players in our area and I had a chance to explore more complex decks and mechanics and this ignited my passion for this game. I dont buy cards and new decks as often as I would like to, mainly due the the cost.</p>
+          <li>Sudoku Puzzles</li>
+            <p>Puzzles are one of those things I think everybody enjoys. I got introduced to doing Sudoku puzzles many years ago in my early 20s and I have been hooked ever since. There is something about the patterns and watching the lines and boxes get completed that brings me a great satisfaction. The feeling of accomplishment I get solving a really challenging Sudoku puzzle is one of the best feelings. Sudoku also works as a form of relaxation and mediation for me.</p>
       </ul>
 
     <h2>Here Are Some of the Projects I Have Worked On</h2>
