add section for Experience with headingg and sub headings for Education, Work Experience, and Why I Decided to Begin Learning At Epicodus. add sub headings for noteworthy classes I took in High School with paragraphs explaining in further detal. add sub headings for each job under wrok history.
Authored by: Zachary Green <ultrazacky@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
         <br> 
         I used to play the Violin when I was really young. My violin teacher Stephan always told me that I had the gift of the musical ear. I unfornately was never able to continue my lessons due to the cost of the classes after I turned 18, but I still from time to time like to pick it up and play. Music has been a big part of my life even before I ever started to play Violin. It has served as something that calms me down and empowers me. You can sometimes find me singing at a local karaoke and even dancing.</p>
 
+    <h2><em>A History of My Experience</em></h2>
+        <h3><strong>Education</strong></h3>
+            <h4><strong><em>Fortuna Union High School</em></strong></h4>
+              <h5>Graduated in Class of 2004</h5>
+                <p>Here is a list of noteworthy subjects I studied:</p>
+                  <ul>
+                    <li>Theatre Arts</li>
+                      <p>From Sophomore year till I graduated, I participated in the Theatre Arts classes offered by Fortuna High under the leadership and guidance of Carolyn Ayers. Outside of class I participated in several professional theatre productions directed by Carolyn Ayers, ranging from smaller roles to leading roles.
+                        <br>
+                        Here is a list of productions I was a part of:</p>
+                          <ol>
+                            <li>Street Scene</li>
+                            <li>Harvey</li>
+                            <li>Twelth Night</li>
+                            <li>The Scary World of Steven Greg: Zero Sum Mind</li>
+                            <li>The Man Who Came To Dinner</li>
+                          </ol>
+                    <li>Japanese Language</li>
+                      <p>I graduated from the first class <em>Japanese I</em> at Humboldt State University. Then later took personal lessons from Mie Matsumoto-sensei at her home for about another year. I learned the hiragana and katakana alphabets, as well as basic Japanese sentence structure for navigation through Japan.</p>
+                  </ul>
+        <h3><strong>Work Experience</strong></h3>
+            <h4>Bob's Footlongs</h4>
+            <h4>Tom's Sourdough Pizza Villa</h4>
+            <h4>Victorian Inn</h4>
+            <h4>Suddenlink Communications by Altice</h4>
+            <h4>Reyes Coca Cola Bottling Company</h4>
+            <h4>Humboldt Redwood Company</h4>
+            <h4>Westside Pizza</h4>
+        <h3><strong>Why I Decided To Begin Learning At Epicodus</strong></h3>
+          <p>Place holder text for explanation</p>
+          
     <h2><em>Information About Some of My Hobbies</em></h2>
       <p>In the previous section I laid out 2 examples of interests that I have, but in this section I want to go into more detail on some of the other activities I enjoy.</p>
         <ul>
