add bold lettering and emphasis on sub headings to make them more visable and draw attention to them.
Authored by: Zachary Green <ultrazacky@gmail.com>

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h3><strong>Education</strong></h3>
             <h4><strong><em>Fortuna Union High School</em></strong></h4>
               <h5>Graduated in Class of 2004</h5>
-                <p>Here is a list of noteworthy subjects I studied:</p>
+                <p><em>Here is a list of noteworthy subjects I studied:</em></p>
                   <ul>
-                    <li>Theatre Arts</li>
+                    <li><strong><em>Theatre Arts</em></strong></li>
                       <p>From Sophomore year till I graduated, I participated in the Theatre Arts classes offered by Fortuna High under the leadership and guidance of Carolyn Ayers. Outside of class I participated in several professional theatre productions directed by Carolyn Ayers, ranging from smaller roles to leading roles.
                         <br>
                         Here is a list of productions I was a part of:</p>
@@ -26,32 +26,32 @@
                             <li>Harvey</li>
                             <li>Twelth Night</li>
                             <li>The Scary World of Steven Greg: Zero Sum Mind</li>
-                            <li>The Man Who Came To Dinner</li>
+                            <li>The Man Who Came To Dinner</li><br>
                           </ol>
-                    <li>Japanese Language</li>
+                    <li><strong><em>Japanese Language</em></strong></li>
                       <p>I graduated from the first class <em>Japanese I</em> at Humboldt State University. Then later took personal lessons from Mie Matsumoto-sensei at her home for about another year. I learned the hiragana and katakana alphabets, as well as basic Japanese sentence structure for navigation through Japan.</p>
                   </ul>
         <h3><strong>Work Experience</strong></h3>
-            <h4>Bob's Footlongs</h4>
-            <h4>Tom's Sourdough Pizza Villa</h4>
-            <h4>Victorian Inn</h4>
-            <h4>Suddenlink Communications by Altice</h4>
-            <h4>Reyes Coca Cola Bottling Company</h4>
-            <h4>Humboldt Redwood Company</h4>
-            <h4>Westside Pizza</h4>
+            <h4><strong><em>Bob's Footlongs</em></strong></h4>
+            <h4><strong><em>Tom's Sourdough Pizza Villa</em></strong></h4>
+            <h4><strong><em>Victorian Inn</em></strong></h4>
+            <h4><strong><em>Suddenlink Communications by Altice</em></strong></h4>
+            <h4><strong><em>Reyes Coca Cola Bottling Company</em></strong></h4>
+            <h4><strong><em>Humboldt Redwood Company</em></strong></h4>
+            <h4><strong><em>Westside Pizza</em></strong></h4>
         <h3><strong>Why I Decided To Begin Learning At Epicodus</strong></h3>
           <p>Place holder text for explanation</p>
-          
+
     <h2><em>Information About Some of My Hobbies</em></h2>
       <p>In the previous section I laid out 2 examples of interests that I have, but in this section I want to go into more detail on some of the other activities I enjoy.</p>
         <ul>
-          <li>Video Gaming</li>
+          <li><strong>Video Gaming<em></em></strong></li>
             <p>Playing video games is probably my biggest hobby. It started out and has continued to be something very fond for me that ties back to my older brother Justin. My older brother and I didnt always get along with eachother growing up, but video games were the one hobby where we got along and could bond. Video Games and more importantly the consoles needed to play them probably played the biggest role in my developing a love for technology; and later programming.</p>
-          <li>Japanese Anime</li>
+          <li><strong><em>Japanese Anime</em></strong></li>
             <p>Anime is something that I have actually been enjoying, long before I ever knew what it actually was. Later when I got into middle school my older brother got job and would periodically buy VHS Tapes of Japanese Anime. Back in those days in the early 1990s anime was not as easy to find like it is these days. When Dragon Ball Z first started airing on television here in the US, my Dad took an interest into anime. He would buy animes that someone had recorded off live TV in Japan and added subtitles to. My friends and I, as well and my family really got into this new medium of entertainment and it has stayed with my forever.</p>
-          <li>Magic the Gathering</li>
+          <li><strong><em>Magic the Gathering</em></strong></li>
             <p>Magic the Gathering is a table top card game that started back in the 1990s. Growing up I never had a chance to play the game, but in recent years I had a really good friend introduce me to the game. He bought me my first deck of cards and taught me how to play the game. Later down the road when I started my last job, my General Manager and I started to play games after work was over. He is considered one of the best players in our area and I had a chance to explore more complex decks and mechanics and this ignited my passion for this game. I dont buy cards and new decks as often as I would like to, mainly due the the cost.</p>
-          <li>Sudoku Puzzles</li>
+          <li><strong><em>Sudoku Puzzles</em></strong></li>
             <p>Puzzles are one of those things I think everybody enjoys. I got introduced to doing Sudoku puzzles many years ago in my early 20s and I have been hooked ever since. There is something about the patterns and watching the lines and boxes get completed that brings me a great satisfaction. The feeling of accomplishment I get solving a really challenging Sudoku puzzle is one of the best feelings. Sudoku also works as a form of relaxation and mediation for me.</p>
       </ul>
 
