add sub headings for each job with sections for years completed and skills learned at each job. add bold lettering and emphasis to specific sections to make text easier to read and navigate.
Authored by: Zachary Green <ultrazacky@gmail.com>

--- a/index.html
+++ b/index.html
@@ -33,12 +33,59 @@
                   </ul>
         <h3><strong>Work Experience</strong></h3>
             <h4><strong><em>Bob's Footlongs</em></strong></h4>
+              <p><em>From: 2004 to 2007</em></p>
+                <h5><strong>Skills Learned</strong></h5>
+                  <ul>
+                    <li>Food Prep</li>
+                    <li>Good Customer Service Practices</li>
+                    <li>Supervision of a Small Team</li>
+                    <li>Equipment Sanitation and Maintenance</li>
+                  </ul>
             <h4><strong><em>Tom's Sourdough Pizza Villa</em></strong></h4>
+              <p><em>From: 2007 to 2015</em></p>
+                <h5><strong>Skills Learned</strong></h5>
+                  <ul>
+                    <li>Delivery Driving</li>
+                    <li>Bank Deposits</li>
+                    <li>Managing Experience</li>
+                    <li>Counting Till and Closing Store</li>
+                  </ul>
             <h4><strong><em>Victorian Inn</em></strong></h4>
+              <p><em>From: 2015 to 2017</em></p>
+                <h5><strong>Skills Learned</strong></h5>
+                  <ul>
+                    <li>Selling Jewelry</li>
+                    <li>Using Booking Software to Reserve Rooms for Customers</li>
+                    <li>Waiter work for the Restaurant Side</li>
+                    <li>Operating a POS (Point of Sale) System</li>
+                    <li>Trained and Became Certified in Being a Host</li>
+                  </ul>
             <h4><strong><em>Suddenlink Communications by Altice</em></strong></h4>
+              <p><em>From:2017-2019</em></p>
+                <h5><strong>Skills Learned</strong></h5>
+                  <ul>
+                    <li>Recieved 1 Week Training in Door-to-Doors Sales in Texas at Altice Headquarters</li>
+                    <li>Learned How To Build Rapport With Clientel to Create New Customer Relationships</li>
+                  </ul>
             <h4><strong><em>Reyes Coca Cola Bottling Company</em></strong></h4>
+              <p><em>From: 2019-2019</em></p>
+                <h5><strong>Skills Learned</strong></h5>
+                  <ul>
+                    <li>Product Merchandising</li>
+                  </ul>
             <h4><strong><em>Humboldt Redwood Company</em></strong></h4>
+              <p><em>From: 2019-2020</em></p>
+                <h5><strong>Skills Learned</strong></h5>
+                  <ul>
+                    <li>Safety</li>
+                    <li>Proper Practice of Locking Out Dangerous Equipment</li>
+                    <li>Wood Sorting</li>
+                    <li>Trash Clean Up</li>
+                    <li>Pulling Wood Strips on Production Line for Processing in Grading Area</li>
+                  </ul>
             <h4><strong><em>Westside Pizza</em></strong></h4>
+              <p><em>From:2020-2021</em></p>
+                
         <h3><strong>Why I Decided To Begin Learning At Epicodus</strong></h3>
           <p>Place holder text for explanation</p>
 
