--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
   <h1><strong>Zachary Green</strong></h1>
     <h2><em>Information About Me</em></h2>
-      <p>I was born and raised in a small rural area of Nothern California called Humboldt County. I am 35 years old. People say that I am pretty goofy person and I regularly make people laugh. I have a great love and appreciation for Japan, Japanese culture, Japanese humor and Japanese pop culture. At one point in time in my life, I thought that I might one day live there. When I was a Senior in High School I took Japanese language classes at our local University via a special program for students.
+      <p>I was born and raised in a small rural area of Nothern California called Humboldt County. I am 35 years old. People say that I am pretty goofy person and I regularly make people laugh. I have a great love and appreciation for Japan, Japanese culture, Japanese humor and Japanese pop culture. At one point in time in my life, I thought that I might one day live there. When I was a Senior in High School I took Japanese language classes at our local University via a special program for students.</p>
         <br> 
-        I used to play the Violin when I was really young. My violin teacher Stephan always told me that I had the gift of the musical ear. I unfornately was never able to continue my lessons due to the cost of the classes after I turned 18, but I still from time to time like to pick it up and play. Music has been a big part of my life even before I ever started to play Violin. It has served as something that calms me down and empowers me. You can sometimes find me singing at a local karaoke and even dancing.</p>
+        <p>I used to play the Violin when I was really young. My violin teacher Stephan always told me that I had the gift of the musical ear. I unfornately was never able to continue my lessons due to the cost of the classes after I turned 18, but I still from time to time like to pick it up and play. Music has been a big part of my life even before I ever started to play Violin. It has served as something that calms me down and empowers me. You can sometimes find me singing at a local karaoke and even dancing.</p>
 
     <h2><em>A History of My Experience</em></h2>
         <h3><strong>Education</strong></h3>
@@ -87,7 +87,11 @@
               <p><em>From:2020-2021</em></p>
                 
         <h3><strong>Why I Decided To Begin Learning At Epicodus</strong></h3>
-          <p>Place holder text for explanation</p>
+          <p>I have always had an interest in technology even at a young age. From the newest Televisions to Computers, Video Game Consoles, Telephones and so on. In the last 4-5 years I began to become interested in opening up game consoles and doing repair work and exploring programming; with the hopes of maybe someday making my own retro video game for a retro video game console like some independant developers. While I was never able to complete this undertaking it got my foot in the door for learning origiinal C programming.</p><br>
+          <p>In 2020 after getting a job at the Scotia Sawmill, I began to think a lot about my future and where I saw myself. I realized that I was no where near having the financial security I desired to be able to achieve some of the dreams I have. I wanted to buy my own home, I also wanted to be able to have the money to be able to travel and see the world. This realization that the area I live in had no good jobs to offer me a feasable means to these goals, then turned me on to looking into my options.</p><br>
+          <p>My little sister Julianna Green had attended and graduated from Epicodus several years prior. She went into this school with no knowledge of programming or what to expect other than a chance at a career and important skills that it would require. She now holds a job for a reputable company and has the financial freedom that she desired to build the future that she always wanted.</p><br>
+          <p>After consulting my sister about it, I finally decided to make the plunge. I spent almost 2 years working as much as I could so that I would be able to have the money to pay for my tuition and be able to be unemployed for 6 months so that I could focus my entire attention on learning coding and the skills needed to solve problems at Epicodus. I am incredibly thankful and excited to have this experience. 
+        </p>
 
     <h2><em>Information About Some of My Hobbies</em></h2>
       <p>In the previous section I laid out 2 examples of interests that I have, but in this section I want to go into more detail on some of the other activities I enjoy.</p>
