add git branch to add image file and css styling. add image below top header with Name
Authored by: Zachary Green <ultrazacky@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1><strong>Zachary Green</strong></h1>
+      <img src="img/zach.jpg">
     <h2><em>Information About Me</em></h2>
       <p>I was born and raised in a small rural area of Nothern California called Humboldt County. I am 35 years old. People say that I am pretty goofy person and I regularly make people laugh. I have a great love and appreciation for Japan, Japanese culture, Japanese humor and Japanese pop culture. At one point in time in my life, I thought that I might one day live there. When I was a Senior in High School I took Japanese language classes at our local University via a special program for students.</p>
         <br> 
