add changes to indentation, fix typos, add css styling for background color and a divider class for centering text of main section headings. add links to github projects
Authored by Zachary Green <ultrazacky@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,100 +1,109 @@
 <DOCTYPE html>
 <html lang="en-US">
 <head>
-<href link="css/styles.css" rel="stylesheet" type="text/css" media="all">
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
   <title>My First Code Review At Epicodus</title>
 </head>
 <body>
-  <h1><strong>Zachary Green</strong></h1>
+  <div class ="bodyFont">
+    <h1><strong>Zachary Green</strong></h1>
       <img src="img/zach.jpg">
-    <h2><em>Information About Me</em></h2>
-      <p>I was born and raised in a small rural area of Nothern California called Humboldt County. I am 35 years old. People say that I am pretty goofy person and I regularly make people laugh. I have a great love and appreciation for Japan, Japanese culture, Japanese humor and Japanese pop culture. At one point in time in my life, I thought that I might one day live there. When I was a Senior in High School I took Japanese language classes at our local University via a special program for students.</p>
+  
+      <h2><em>Information About Me</em></h2>
+  </div>
+        <p>I was born and raised in a small rural area of Nothern California called Humboldt County. I am 35 years old. People say that I am pretty goofy person and I regularly make people laugh. I have a great love and appreciation for Japan, Japanese culture, Japanese humor and Japanese pop culture. At one point in time in my life, I thought that I might one day live there. When I was a Senior in High School I took Japanese language classes at our local University via a special program for students.</p>
         <br> 
         <p>I used to play the Violin when I was really young. My violin teacher Stephan always told me that I had the gift of the musical ear. I unfornately was never able to continue my lessons due to the cost of the classes after I turned 18, but I still from time to time like to pick it up and play. Music has been a big part of my life even before I ever started to play Violin. It has served as something that calms me down and empowers me. You can sometimes find me singing at a local karaoke and even dancing.</p>
-
-    <h2><em>A History of My Experience</em></h2>
+  <div class ="bodyFont">
+      <h2><em>A History of My Experience</em></h2>
         <h3><strong>Education</strong></h3>
-            <h4><strong><em>Fortuna Union High School</em></strong></h4>
-              <h5>Graduated in Class of 2004</h5>
-                <p><em>Here is a list of noteworthy subjects I studied:</em></p>
-                  <ul>
-                    <li><strong><em>Theatre Arts</em></strong></li>
-                      <p>From Sophomore year till I graduated, I participated in the Theatre Arts classes offered by Fortuna High under the leadership and guidance of Carolyn Ayers. Outside of class I participated in several professional theatre productions directed by Carolyn Ayers, ranging from smaller roles to leading roles.
-                        <br>
-                        Here is a list of productions I was a part of:</p>
-                          <ol>
-                            <li>Street Scene</li>
-                            <li>Harvey</li>
-                            <li>Twelth Night</li>
-                            <li>The Scary World of Steven Greg: Zero Sum Mind</li>
-                            <li>The Man Who Came To Dinner</li><br>
-                          </ol>
-                    <li><strong><em>Japanese Language</em></strong></li>
+  </div>
+          <h4><strong><em>Fortuna Union High School</em></strong></h4>
+            <h5>Graduated in Class of 2004</h5>
+              <p><em>Here is a list of noteworthy subjects I studied:</em></p>
+                <ul>
+                  <li><strong><em>Theatre Arts</em></strong></li>
+                    <p>From Sophomore year till I graduated, I participated in the Theatre Arts classes offered by Fortuna High under the leadership and guidance of Carolyn Ayers. Outside of class I participated in several professional theatre productions directed by Carolyn Ayers, ranging from smaller roles to leading roles.
+                    <br>
+                    Here is a list of productions I was a part of:</p>
+                      <ol>
+                        <li>Street Scene</li>
+                        <li>Harvey</li>
+                        <li>Twelth Night</li>
+                        <li>The Scary World of Steven Greg: Zero Sum Mind</li>
+                        <li>The Man Who Came To Dinner</li><br>
+                      </ol>
+                  <li><strong><em>Japanese Language</em></strong></li>
                       <p>I graduated from the first class <em>Japanese I</em> at Humboldt State University. Then later took personal lessons from Mie Matsumoto-sensei at her home for about another year. I learned the hiragana and katakana alphabets, as well as basic Japanese sentence structure for navigation through Japan.</p>
                   </ul>
+  <div class ="bodyFont">
         <h3><strong>Work Experience</strong></h3>
-            <h4><strong><em>Bob's Footlongs</em></strong></h4>
-              <p><em>From: 2004 to 2007</em></p>
-                <h5><strong>Skills Learned</strong></h5>
-                  <ul>
-                    <li>Food Prep</li>
-                    <li>Good Customer Service Practices</li>
-                    <li>Supervision of a Small Team</li>
-                    <li>Equipment Sanitation and Maintenance</li>
-                  </ul>
-            <h4><strong><em>Tom's Sourdough Pizza Villa</em></strong></h4>
-              <p><em>From: 2007 to 2015</em></p>
-                <h5><strong>Skills Learned</strong></h5>
-                  <ul>
-                    <li>Delivery Driving</li>
-                    <li>Bank Deposits</li>
-                    <li>Managing Experience</li>
-                    <li>Counting Till and Closing Store</li>
-                  </ul>
-            <h4><strong><em>Victorian Inn</em></strong></h4>
-              <p><em>From: 2015 to 2017</em></p>
-                <h5><strong>Skills Learned</strong></h5>
-                  <ul>
-                    <li>Selling Jewelry</li>
-                    <li>Using Booking Software to Reserve Rooms for Customers</li>
-                    <li>Waiter work for the Restaurant Side</li>
-                    <li>Operating a POS (Point of Sale) System</li>
-                    <li>Trained and Became Certified in Being a Host</li>
-                  </ul>
-            <h4><strong><em>Suddenlink Communications by Altice</em></strong></h4>
-              <p><em>From:2017-2019</em></p>
-                <h5><strong>Skills Learned</strong></h5>
-                  <ul>
-                    <li>Recieved 1 Week Training in Door-to-Doors Sales in Texas at Altice Headquarters</li>
-                    <li>Learned How To Build Rapport With Clientel to Create New Customer Relationships</li>
-                  </ul>
-            <h4><strong><em>Reyes Coca Cola Bottling Company</em></strong></h4>
-              <p><em>From: 2019-2019</em></p>
-                <h5><strong>Skills Learned</strong></h5>
-                  <ul>
-                    <li>Product Merchandising</li>
-                  </ul>
-            <h4><strong><em>Humboldt Redwood Company</em></strong></h4>
-              <p><em>From: 2019-2020</em></p>
-                <h5><strong>Skills Learned</strong></h5>
-                  <ul>
-                    <li>Safety</li>
-                    <li>Proper Practice of Locking Out Dangerous Equipment</li>
-                    <li>Wood Sorting</li>
-                    <li>Trash Clean Up</li>
-                    <li>Pulling Wood Strips on Production Line for Processing in Grading Area</li>
-                  </ul>
-            <h4><strong><em>Westside Pizza</em></strong></h4>
-              <p><em>From:2020-2021</em></p>
-                
+  </div>
+          <h4><strong><em>Bob's Footlongs</em></strong></h4>
+            <p><em>From: 2004 to 2007</em></p>
+              <h5><strong>Skills Learned</strong></h5>
+                <ul>
+                  <li>Food Prep</li>
+                  <li>Good Customer Service Practices</li>
+                  <li>Supervision of a Small Team</li>
+                  <li>Equipment Sanitation and Maintenance</li>
+                </ul>
+          <h4><strong><em>Tom's Sourdough Pizza Villa</em></strong></h4>
+            <p><em>From: 2007 to 2015</em></p>
+              <h5><strong>Skills Learned</strong></h5>
+                <ul>
+                  <li>Delivery Driving</li>
+                  <li>Bank Deposits</li>
+                  <li>Managing Experience</li>
+                  <li>Counting Till and Closing Store</li>
+                </ul>
+          <h4><strong><em>Victorian Inn</em></strong></h4>
+            <p><em>From: 2015 to 2017</em></p>
+              <h5><strong>Skills Learned</strong></h5>
+                <ul>
+                  <li>Selling Jewelry</li>
+                  <li>Using Booking Software to Reserve Rooms for Customers</li>
+                  <li>Waiter work for the Restaurant Side</li>
+                  <li>Operating a POS (Point of Sale) System</li>
+                  <li>Trained and Became Certified in Being a Host</li>
+                </ul>
+          <h4><strong><em>Suddenlink Communications by Altice</em></strong></h4>
+            <p><em>From:2017-2019</em></p>
+              <h5><strong>Skills Learned</strong></h5>
+                <ul>
+                  <li>Recieved 1 Week Training in Door-to-Doors Sales in Texas at Altice Headquarters</li>
+                  <li>Learned How To Build Rapport With Clientel to Create New Customer Relationships</li>
+                </ul>
+          <h4><strong><em>Reyes Coca Cola Bottling Company</em></strong></h4>
+            <p><em>From: 2019-2019</em></p>
+              <h5><strong>Skills Learned</strong></h5>
+                <ul>
+                  <li>Product Merchandising</li>
+                </ul>
+          <h4><strong><em>Humboldt Redwood Company</em></strong></h4>
+            <p><em>From: 2019-2020</em></p>
+              <h5><strong>Skills Learned</strong></h5>
+                <ul>
+                  <li>Safety</li>
+                  <li>Proper Practice of Locking Out Dangerous Equipment</li>
+                  <li>Wood Sorting</li>
+                  <li>Trash Clean Up</li>
+                  <li>Pulling Wood Strips on Production Line for Processing in Grading Area</li>
+                </ul>
+          <h4><strong><em>Westside Pizza</em></strong></h4>
+            <p><em>From:2020-2021</em></p>
+  <div class ="bodyFont">       
         <h3><strong>Why I Decided To Begin Learning At Epicodus</strong></h3>
           <p>I have always had an interest in technology even at a young age. From the newest Televisions to Computers, Video Game Consoles, Telephones and so on. In the last 4-5 years I began to become interested in opening up game consoles and doing repair work and exploring programming; with the hopes of maybe someday making my own retro video game for a retro video game console like some independant developers. While I was never able to complete this undertaking it got my foot in the door for learning original C programming language.</p><br>
           <p>In 2020 after getting a job at the Scotia Sawmill, I began to think a lot about my future and where I saw myself. I realized that I was no where near having the financial security I desired to be able to achieve some of the dreams I have. I wanted to buy my own home, I also wanted to be able to have the money to be able to travel and see the world. This realization that the area I live in had no good jobs to offer me a feasable means to these goals, then turned me on to looking into my options.</p><br>
           <p>My little sister Julianna Green had attended and graduated from Epicodus several years prior. She went into this school with no knowledge of programming or what to expect other than a chance at a career and important skills that it would require. She now holds a job for a reputable company and has the financial freedom that she desired to build the future that she always wanted.</p><br>
           <p>After consulting my sister about it, I finally decided to make the plunge. I spent almost 2 years working as much as I could so that I would be able to have the money to pay for my tuition and be able to be unemployed for 6 months so that I could focus my entire attention on learning coding and the skills needed to solve problems at Epicodus. I am incredibly thankful and excited to have this experience. 
         </p>
+  </div>
 
+  <div class ="bodyFont">
     <h2><em>Information About Some of My Hobbies</em></h2>
+  </div>
       <p>In the previous section I laid out 2 examples of interests that I have, but in this section I want to go into more detail on some of the other activities I enjoy.</p>
         <ul>
           <li><strong>Video Gaming<em></em></strong></li>
@@ -106,14 +115,17 @@
           <li><strong><em>Sudoku Puzzles</em></strong></li>
             <p>Puzzles are one of those things I think everybody enjoys. I got introduced to doing Sudoku puzzles many years ago in my early 20s and I have been hooked ever since. There is something about the patterns and watching the lines and boxes get completed that brings me a great satisfaction. The feeling of accomplishment I get solving a really challenging Sudoku puzzle is one of the best feelings. Sudoku also works as a form of relaxation and mediation for me.</p>
       </ul>
-
-    <h2>Here Are Some of the Projects I Have Worked On</h2>
+  <div class ="bodyFont">
+    <h2><em>Here Are Some of the Projects I Have Worked On</em></h2>
+  </div>
       <ol>
-        <li>projectOne</li>
-        <li>projectTwo</li>
-        <li>projectThree</li>
-        <li>prrojectFour</li>
+        <li><a href="https://github.com/Ultra-Zactimus/Hello-World">Hello World</a></li>
+        <li><a href="https://github.com/Ultra-Zactimus/Goodbye-World">Goodbye World</a></li>
+        <li><a href="https://github.com/Ultra-Zactimus/My-First-Webpage">My First Webpage</a></li>
+        <li><a href="https://github.com/Ultra-Zactimus/CSS-Classes-Practice-Page"> CSS Practice Page </a></li>
+        <li><a href="https://github.com/Ultra-Zactimus/boring-webpage">Boring Webpage</a></li>
+        <li><a href="https://github.com/Ultra-Zactimus/adopt-pets">Adopt a Pet Page</a></li>
+        <li><a href="https://github.com/Ultra-Zactimus/myDreamVacation">My Dream Vacation</a></li>
       </ol>
-
 </body>
 </html>
