add decriptions to the repository links and link to Ultra-Zactimus gitHub profile page
Authored by: Zachary Green <ultrazacky@gmail.com>

--- a/index.html
+++ b/index.html
@@ -123,13 +123,23 @@
     <h2><em>Here Are Some of the Projects I Have Worked On</em></h2>
       <ol>
         <li><a href="https://github.com/Ultra-Zactimus/Hello-World">Hello World</a></li>
+          <p>This one shows off how to say Hello in multiple languages! I used HTML for this project</p>
         <li><a href="https://github.com/Ultra-Zactimus/Goodbye-World">Goodbye World</a></li>
+          <p>This one shows off how to say Goodbye in multiple languages! I used HTML for this project</p>
         <li><a href="https://github.com/Ultra-Zactimus/My-First-Webpage">My First Webpage</a></li>
+          <p>This one demonstrates HTML, CSS and using anchors and page linking. It links to my 4th project I made!</p>
         <li><a href="https://github.com/Ultra-Zactimus/CSS-Classes-Practice-Page"> CSS Practice Page </a></li>
+          <p>This one demonstrates the power of using classes in CSS in HTML! The Power of Style!</p>
         <li><a href="https://github.com/Ultra-Zactimus/boring-webpage">Boring Webpage</a></li>
+          <p>This one demonstrates how we can use lorem ipsum as a placeholder while we build our website.<br>
+          It also demonstrates more with using classes in CSS on HTML.</p>
         <li><a href="https://github.com/Ultra-Zactimus/adopt-pets">Adopt a Pet Page</a></li>
+          <p>This one demonstrates using floats in CSS on HTMLto create text that can wrap around an image and how it can be used to create collumns.</p>
         <li><a href="https://github.com/Ultra-Zactimus/myDreamVacation">My Dream Vacation</a></li>
+            <P>We tried to have a little humor with this one. This demonstrates the power of using Bootstrap in CSS on HTML</P>
       </ol>
+    <h2><em>Also Please check out my gitHub and send me a follow!<a href="https://github.com/Ultra-Zactimus">Ultra-Zactimus</a></em></h2>
+      
   </div>
 </body>
 </html>
